Fixing the overflow on long site names
--HG--
branch : 1.x
extra : rebase_source : 605f8628a741447b1aedcef26496668b45743c8a

--- a/src/Orchard.Web/Themes/TheAdmin/Styles/site.css
+++ b/src/Orchard.Web/Themes/TheAdmin/Styles/site.css
@@ -241,6 +241,7 @@ ul.disc {list-style:disc inside; margin:12px 0;}
 }
 #site {
     font-size:1.385em; /*18px*/
+    overflow: hidden;
 }
 #site a, #site a:visited, #site a:active {
     color:#fff;
